# car_damage

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  GITHUB_README.md  INFERENCE_GUIDE.md  LICENSE  Makefile  README.md  README_OLD.md  annotation_tool.py  collision_parts_cli.py  convert_dataset_to_csv.py  convert_to_labelme.py  debug_test.py  download_datasets.py  download_kaggle_dataset.py  dvc.yaml  pyproject.toml  pytest.ini  quick_test.py  requirements.txt  run_tests.py  start_server.py  test_api.py  test_integration.py  test_prediction.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
collision_parts_env/: pyvenv.cfg
collision_parts_env/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack  jp.py  pygrun
configs/: config.yaml  correction_codes.yaml  data.yaml  thresholds.yaml
configs/train/: resnet50.yaml  yolo11m.yaml
data/processed/: class_statistics.json  no_damage_annotations.json  vehide_class_statistics.json
docker/: Dockerfile.infer  Dockerfile.train
docs/: DEVELOPMENT.md  UNIFIED_TRANSFORMER.md  UNIFIED_TRANSFORMER_QUICKSTART.md
k8s/: deployment-infer.yaml  service-infer.yaml
src/: __init__.py
src/cli/: __init__.py  main.py
src/data/: __init__.py  convert_vehide.py  dataset.py  dataset_features.py  dataset_resnet.py  merge_annotations.py  prepare_no_damage.py  split_annotations.py  to_yolo.py
src/eval/: compare_models.py  eval_resnet.py  eval_yolo.py
src/infer/: __init__.py  mapping.py  pipeline.py  schemas.py  service.py  unified_transformer_inference.py
tests/: __init__.py  conftest.py  test_data_prep.py  test_infer_api.py  test_inference.py  test_thresholding.py
working/: PROJECT_STATUS.md  README.md  annotation_tool.py  app_batch.py  batch_to_coco.py  batch_to_coco_2500.py  batch_to_coco_test.py  demo.py  prepare_2500_dataset.py  requirements.txt  split_coco_dataset.py  test_model.py  train_unified_fast.py  validate_coco.py
(+11439 files in other folders)
